--- a/css/index.css
+++ b/css/index.css
@@ -645,11 +645,6 @@ a.layout-gallery-link .callout {
     margin-top: 0;
   }
 
-  header {
-    height: 80px;
-    font-size: 32px;
-  }
-
   .shop {
     display: none;
   }
